# yt-soundflex

./: Dockerfile  jest.config.ts  main.py  next.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
api/: __init__.py
api/src/dto/: __init__.py  encode_webm.py  get_youtube_info.py
api/src/service/: __init__.py  encodeWebm.py  getYoutubeInfo.py
api/src/utils/: __init__.py  customError.py
api/src/value_object/: __init__.py  channel_name.py  thumbnail_src.py  title.py  url.py  webm_binary.py
public/: global.css
src/app/: layout.tsx  page.tsx
src/components/: index.ts
src/components/ConvertForm/: index.tsx  style.ts
src/components/Header/: index.tsx  style.tsx
src/components/MovieTableData/: index.tsx
src/components/MoviesList/: index.tsx
src/components/MoviesList/LoadingModal/: index.tsx
src/components/MoviesList/MovieTableData/: index.tsx  style.ts
src/components/MoviesList/MoviesTable/: index.tsx  style.ts
src/components/MoviesTable/: index.tsx
src/components/Preview/: index.tsx  style.ts
src/components/SearchForm/: index.tsx  style.ts
src/components/SetMovieForm/: index.tsx
src/models/api/: encode_webm.d.ts  get_youtube_info.d.ts
src/models/convert_info/: entity.ts  jsonType.d.ts
src/models/movie/: _id.ts  entity.ts  jsonType.d.ts  repository.ts
src/models/youtube_info/: entity.ts  jsonType.d.ts
src/service/: ChangeConvertInfo.ts  CreateConvertInfo.ts  CreateMovie.ts  GetConvertedUrl.ts  SearchForYoutube.ts  index.ts
src/utils/: callApi.ts  decodeBase64.ts
(+15 files in other folders)
