[project]
name = "yt-soundflex"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "pdmuds4", email = "ryosuke3191@gmail.com" }
]
dependencies = [
    "fastapi>=0.112.1",
    "uvicorn>=0.30.6",
    "mangum>=0.17.0",
    "pytubefix>=6.13.0",
    "pydantic>=2.8.2",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "python-dotenv>=1.0.1",
    "pytest>=8.3.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["api"]

[project.scripts]
app = "api:run"
